--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <p>Ex. Com boy</p>
         <p style="font-size:10px;">--Socials--</p>
         <a href="https://doxbin.com/user/yuko" target="_blank" rel="noopener noreferrer"><img src="images/dbin.png" alt="Doxbin" height="30px"></a>
-        <a href="https://t.me/yukolol" target="_blank" rel="noopener noreferrer"><img src="images/telegram.png" height="30px" alt="Telegram"></a>
+        <a href="https://t.me/yukolola" target="_blank" rel="noopener noreferrer"><img src="images/telegram.png" height="30px" alt="Telegram"></a>
         <a href="https://www.roblox.com/users/1624343130/profile" target="_blank" rel="noopener noreferrer"><img src="images/roblox.png" height="30px" alt="Roblox"></a>
-        <a href="https://discord.com/users/850589313481048075" target="_blank" rel="noopener noreferrer"><img src="images/discord.png" height="30px" alt="Discord"></a>
+        <a href="https://discord.com/users/1336806943561351239" target="_blank" rel="noopener noreferrer"><img src="images/discord.png" height="30px" alt="Discord"></a>
       </div>
     </div>
 
