--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -6,7 +8,6 @@
     <script disable-devtool-auto="" src="js/disable-devtool.min.js"></script>
 
     <link href="https://fonts.cdnfonts.com/css/vcr-osd-mono" rel="stylesheet">
-
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="center-screen wallpaper">
@@ -25,18 +26,21 @@
     <div class="box-contain">
       <div class="box-brrr">
        <img style="margin-left: 10px;" src="images/yuko.gif" class="pfp" alt="Pierce PFP">
-        <h3></span>YUKO</h3>
+        <h3>YUKO</h3>
         <p>Ex. Com boy</p>
         <p style="font-size:10px;">--Socials--</p>
         <a href="https://doxbin.com/user/yuko" target="_blank" rel="noopener noreferrer"><img src="images/dbin.png" alt="Doxbin" height="30px"></a>
-        <a href="https://t.me/yukolola" target="_blank" rel="noopener noreferrer"><img src="images/telegram.png" height="30px" alt="Telegram"></a>
+        <a href="https://t.me/yukolol" target="_blank" rel="noopener noreferrer"><img src="images/telegram.png" height="30px" alt="Telegram"></a>
         <a href="https://www.roblox.com/users/1624343130/profile" target="_blank" rel="noopener noreferrer"><img src="images/roblox.png" height="30px" alt="Roblox"></a>
-        <a href="https://discord.com/users/1336806943561351239" target="_blank" rel="noopener noreferrer"><img src="images/discord.png" height="30px" alt="Discord"></a>
+        <a href="https://discord.com/users/850589313481048075" target="_blank" rel="noopener noreferrer"><img src="images/discord.png" height="30px" alt="Discord"></a>
       </div>
     </div>
 
+    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/257461521&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 
-  
-
-
-</body></html>
+    <div style="font-size: 10px; color: #cccccc; line-break: anywhere; word-break: normal; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; font-family: Interstate, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Garuda, Verdana, Tahoma, sans-serif; font-weight: 100;">
+        <a href="https://soundcloud.com/octobersveryown" title="octobersveryown" target="_blank" style="color: #cccccc; text-decoration: none;">octobersveryown</a> Â· 
+        <a href="https://soundcloud.com/octobersveryown/drake-headlines" title="Headlines (Explicit Version)" target="_blank" style="color: #cccccc; text-decoration: none;">Headlines (Explicit Version)</a>
+    </div>
+</body>
+</html>
