--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 
     <link href="https://fonts.cdnfonts.com/css/vcr-osd-mono" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+
+    <style>
+        .hidden-player {
+            display: none;
+        }
+    </style>
 </head>
 <body class="center-screen wallpaper">
     <pre>                           
@@ -26,7 +32,7 @@
     <div class="box-contain">
       <div class="box-brrr">
        <img style="margin-left: 10px;" src="images/yuko.gif" class="pfp" alt="Pierce PFP">
-        <h3>YUKO</h3>
+        <h3></span>YUKO</h3>
         <p>Ex. Com boy</p>
         <p style="font-size:10px;">--Socials--</p>
         <a href="https://doxbin.com/user/yuko" target="_blank" rel="noopener noreferrer"><img src="images/dbin.png" alt="Doxbin" height="30px"></a>
@@ -36,7 +42,7 @@
       </div>
     </div>
 
-    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/257461521&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+    <iframe class="hidden-player" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/257461521&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 
     <div style="font-size: 10px; color: #cccccc; line-break: anywhere; word-break: normal; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; font-family: Interstate, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Garuda, Verdana, Tahoma, sans-serif; font-weight: 100;">
         <a href="https://soundcloud.com/octobersveryown" title="octobersveryown" target="_blank" style="color: #cccccc; text-decoration: none;">octobersveryown</a> Â· 
