--- a/index.html
+++ b/index.html
@@ -10,9 +10,30 @@
     <link href="https://fonts.cdnfonts.com/css/vcr-osd-mono" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <style>
         .hidden-player {
             display: none;
+        }
+
+        .player-controls {
+            margin-top: 10px;
+            text-align: center;
+        }
+
+        .player-controls button {
+            font-size: 24px;
+            padding: 15px;
+            background-color: #000000;
+            color: white;
+            border: none;
+            border-radius: 50%;
+            cursor: pointer;
+        }
+
+        .player-controls button:hover {
+            background-color: #000000;
         }
     </style>
 </head>
@@ -32,21 +53,50 @@
     <div class="box-contain">
       <div class="box-brrr">
        <img style="margin-left: 10px;" src="images/yuko.gif" class="pfp" alt="Pierce PFP">
-        <h3></span>YUKO</h3>
+        <h3>YUKO</h3>
         <p>FUCK COM LOL</p>
         <p style="font-size:10px;">--Socials--</p>
-        <a href="https://doxbin.com/user/yuko" target="_blank" rel="noopener noreferrer"><img src="images/dbin.png" alt="Doxbin" height="30px"></a>
         <a href="https://t.me/yukolola" target="_blank" rel="noopener noreferrer"><img src="images/telegram.png" height="30px" alt="Telegram"></a>
         <a href="https://www.roblox.com/users/1624343130/profile" target="_blank" rel="noopener noreferrer"><img src="images/roblox.png" height="30px" alt="Roblox"></a>
         <a href="https://discord.com/users/1336806943561351239" target="_blank" rel="noopener noreferrer"><img src="images/discord.png" height="30px" alt="Discord"></a>
       </div>
     </div>
 
-    <iframe class="hidden-player" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/257461521&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+    <iframe id="soundcloud-player" class="hidden-player" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/257461521&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 
-    <div style="font-size: 10px; color: #cccccc; line-break: anywhere; word-break: normal; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; font-family: Interstate, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Garuda, Verdana, Tahoma, sans-serif; font-weight: 100;">
+    <div class="player-controls">
+        <button id="playPauseBtn"><i id="playPauseIcon" class="fas fa-play"></i></button>
+    </div>
+
+    <div style="font-size: 10px; color: #cccccc; display: none;">
         <a href="https://soundcloud.com/octobersveryown" title="octobersveryown" target="_blank" style="color: #cccccc; text-decoration: none;">octobersveryown</a> Â· 
         <a href="https://soundcloud.com/octobersveryown/drake-headlines" title="Headlines (Explicit Version)" target="_blank" style="color: #cccccc; text-decoration: none;">Headlines (Explicit Version)</a>
     </div>
+
+    <script>
+        const playPauseBtn = document.getElementById('playPauseBtn');
+        const playPauseIcon = document.getElementById('playPauseIcon');
+        const soundCloudPlayer = document.getElementById('soundcloud-player');
+
+        let isPlaying = true;
+
+        function togglePlayPause() {
+            if (isPlaying) {
+                let pausedUrl = soundCloudPlayer.src.replace("auto_play=true", "auto_play=false");
+                soundCloudPlayer.src = pausedUrl;
+                playPauseIcon.classList.remove('fa-pause');
+                playPauseIcon.classList.add('fa-play');
+            } else {
+                let playingUrl = soundCloudPlayer.src.replace("auto_play=false", "auto_play=true");
+                soundCloudPlayer.src = playingUrl;
+                playPauseIcon.classList.remove('fa-play');
+                playPauseIcon.classList.add('fa-pause');
+            }
+
+            isPlaying = !isPlaying;
+        }
+
+        playPauseBtn.addEventListener('click', togglePlayPause);
+    </script>
 </body>
 </html>
