--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
       <div class="box-brrr">
        <img style="margin-left: 10px;" src="images/yuko.gif" class="pfp" alt="Pierce PFP">
         <h3>YUKO</h3>
-        <p>FUCK COM LOL</p>
+        <p>Ex. Com boy</p>
         <p style="font-size:10px;">--Socials--</p>
-        <a href="https://t.me/yukolola" target="_blank" rel="noopener noreferrer"><img src="images/telegram.png" height="30px" alt="Telegram"></a>
+        <a href="https://t.me/yukolol" target="_blank" rel="noopener noreferrer"><img src="images/telegram.png" height="30px" alt="Telegram"></a>
         <a href="https://www.roblox.com/users/1624343130/profile" target="_blank" rel="noopener noreferrer"><img src="images/roblox.png" height="30px" alt="Roblox"></a>
-        <a href="https://discord.com/users/1336806943561351239" target="_blank" rel="noopener noreferrer"><img src="images/discord.png" height="30px" alt="Discord"></a>
+        <a href="https://discord.com/users/850589313481048075" target="_blank" rel="noopener noreferrer"><img src="images/discord.png" height="30px" alt="Discord"></a>
       </div>
     </div>
 
     <iframe id="soundcloud-player" class="hidden-player" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/257461521&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 
     <div class="player-controls">
-        <button id="playPauseBtn"><i id="playPauseIcon" class="fas fa-play"></i></button>
+        <button id="playPauseBtn"><i id="playPauseIcon" class="fas fa-pause"></i></button>
     </div>
 
     <div style="font-size: 10px; color: #cccccc; display: none;">
@@ -79,6 +79,10 @@
         const soundCloudPlayer = document.getElementById('soundcloud-player');
 
         let isPlaying = true;
+
+        window.onload = function() {
+            soundCloudPlayer.src = soundCloudPlayer.src.replace("auto_play=false", "auto_play=true");
+        };
 
         function togglePlayPause() {
             if (isPlaying) {
