--- a/index.html
+++ b/index.html
@@ -1,44 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>yuko.lol</title>
-    <script disable-devtool-auto="" src="js/disable-devtool.min.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>yuko.lol</title>
+  <script disable-devtool-auto src="js/disable-devtool.min.js"></script>
 
-    <link href="https://fonts.cdnfonts.com/css/vcr-osd-mono" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.cdnfonts.com/css/vcr-osd-mono" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <style>
+    .hidden-player {
+      position: absolute;
+      left: -9999px;
+      top: 0;
+      width: 1px;
+      height: 1px;
+      overflow: hidden;
+    }
 
-    <style>
-        .hidden-player {
-            display: none;
-        }
+    .player-controls {
+      margin-top: 10px;
+      text-align: center;
+    }
 
-        .player-controls {
-            margin-top: 10px;
-            text-align: center;
-        }
+    .player-controls button {
+      font-size: 24px;
+      padding: 15px;
+      background-color: #000000;
+      color: white;
+      border: none;
+      border-radius: 50%;
+      cursor: pointer;
+    }
 
-        .player-controls button {
-            font-size: 24px;
-            padding: 15px;
-            background-color: #000000;
-            color: white;
-            border: none;
-            border-radius: 50%;
-            cursor: pointer;
-        }
-
-        .player-controls button:hover {
-            background-color: #000000;
-        }
-    </style>
+    .player-controls button:hover {
+      background-color: #222;
+    }
+  </style>
 </head>
 <body class="center-screen wallpaper">
-    <pre>                           
+
+  <pre>                           
 
 
                     __             .__         .__    
@@ -49,10 +54,11 @@
        \/               \/      \/                    
 
   </pre>
-    <div class="intial-container">
+
+  <div class="intial-container">
     <div class="box-contain">
       <div class="box-brrr">
-       <img style="margin-left: 10px;" src="images/yuko.gif" class="pfp" alt="Pierce PFP">
+        <img style="margin-left: 10px;" src="images/yuko.gif" class="pfp" alt="Pierce PFP">
         <h3>YUKO</h3>
         <p>Ex. Com boy</p>
         <p style="font-size:10px;">--Socials--</p>
@@ -62,45 +68,47 @@
       </div>
     </div>
 
-    <iframe id="soundcloud-player" class="hidden-player" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/257461521&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+    <iframe id="soundcloud-player" 
+      class="hidden-player" 
+      scrolling="no" 
+      frameborder="no" 
+      allow="autoplay" 
+      src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/257461521&color=%23ff5500&auto_play=true&hide_related=false&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false">
+    </iframe>
 
     <div class="player-controls">
-        <button id="playPauseBtn"><i id="playPauseIcon" class="fas fa-pause"></i></button>
+      <button id="playPauseBtn"><i id="playPauseIcon" class="fas fa-pause"></i></button>
     </div>
 
-    <div style="font-size: 10px; color: #cccccc; display: none;">
-        <a href="https://soundcloud.com/octobersveryown" title="octobersveryown" target="_blank" style="color: #cccccc; text-decoration: none;">octobersveryown</a> Â· 
-        <a href="https://soundcloud.com/octobersveryown/drake-headlines" title="Headlines (Explicit Version)" target="_blank" style="color: #cccccc; text-decoration: none;">Headlines (Explicit Version)</a>
-    </div>
+  </div>
 
-    <script>
-        const playPauseBtn = document.getElementById('playPauseBtn');
-        const playPauseIcon = document.getElementById('playPauseIcon');
-        const soundCloudPlayer = document.getElementById('soundcloud-player');
+  <script>
+    const playPauseBtn = document.getElementById('playPauseBtn');
+    const playPauseIcon = document.getElementById('playPauseIcon');
+    const soundCloudPlayer = document.getElementById('soundcloud-player');
 
-        let isPlaying = true;
+    let isPlaying = true;
 
-        window.onload = function() {
-            soundCloudPlayer.src = soundCloudPlayer.src.replace("auto_play=false", "auto_play=true");
-        };
-
-        function togglePlayPause() {
-            if (isPlaying) {
-                let pausedUrl = soundCloudPlayer.src.replace("auto_play=true", "auto_play=false");
-                soundCloudPlayer.src = pausedUrl;
-                playPauseIcon.classList.remove('fa-pause');
-                playPauseIcon.classList.add('fa-play');
-            } else {
-                let playingUrl = soundCloudPlayer.src.replace("auto_play=false", "auto_play=true");
-                soundCloudPlayer.src = playingUrl;
-                playPauseIcon.classList.remove('fa-play');
-                playPauseIcon.classList.add('fa-pause');
-            }
-
-            isPlaying = !isPlaying;
+    function togglePlayPause() {
+      const playerSrc = soundCloudPlayer.src;
+      if (isPlaying) {
+        if (!playerSrc.includes("auto_play=false")) {
+          soundCloudPlayer.src = playerSrc.replace("auto_play=true", "auto_play=false");
         }
+        playPauseIcon.classList.remove('fa-pause');
+        playPauseIcon.classList.add('fa-play');
+      } else {
+        if (!playerSrc.includes("auto_play=true")) {
+          soundCloudPlayer.src = playerSrc.replace("auto_play=false", "auto_play=true");
+        }
+        playPauseIcon.classList.remove('fa-play');
+        playPauseIcon.classList.add('fa-pause');
+      }
+      isPlaying = !isPlaying;
+    }
 
-        playPauseBtn.addEventListener('click', togglePlayPause);
-    </script>
+    playPauseBtn.addEventListener('click', togglePlayPause);
+  </script>
+
 </body>
 </html>
