--- a/index.html
+++ b/index.html
@@ -5,13 +5,34 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>yuko.lol</title>
-  <script disable-devtool-auto src="js/disable-devtool.min.js"></script>
 
+  <script disable-devtool-auto src="js/disable-devtool.min.js"></script>
   <link href="https://fonts.cdnfonts.com/css/vcr-osd-mono" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
   <style>
+    body {
+      margin: 0;
+      padding: 0;
+    }
+
+    #enterScreen {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: black;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: 'VCR OSD Mono', sans-serif;
+      font-size: 24px;
+      z-index: 9999;
+      cursor: pointer;
+      transition: opacity 0.5s ease;
+    }
+
     .hidden-player {
       position: absolute;
       left: -9999px;
@@ -41,18 +62,18 @@
     }
   </style>
 </head>
+
 <body class="center-screen wallpaper">
 
-  <pre>                           
+  <div id="enterScreen">Click to Enter</div>
 
-
+  <pre>
                     __             .__         .__    
        ___.__.__ __|  | ______     |  |   ____ |  |   
       <   |  |  |  \  |/ /  _ \    |  |  /  _ \|  |   
        \___  |  |  /    <  <_> )   |  |_(  <_> )  |__ 
        / ____|____/|__|_ \____/ /\ |____/\____/|____/ 
        \/               \/      \/                    
-
   </pre>
 
   <div class="intial-container">
@@ -68,45 +89,56 @@
       </div>
     </div>
 
-    <iframe id="soundcloud-player" 
-      class="hidden-player" 
-      scrolling="no" 
-      frameborder="no" 
-      allow="autoplay" 
-      src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/257461521&color=%23ff5500&auto_play=true&hide_related=false&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false">
+    <iframe 
+      id="soundcloud-player"
+      class="hidden-player"
+      scrolling="no"
+      frameborder="no"
+      allow="autoplay"
+      src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/257461521&color=%23ff5500&auto_play=false&hide_related=false&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false">
     </iframe>
 
     <div class="player-controls">
       <button id="playPauseBtn"><i id="playPauseIcon" class="fas fa-pause"></i></button>
     </div>
-
   </div>
 
+  <script src="https://w.soundcloud.com/player/api.js"></script>
   <script>
+    const enterScreen = document.getElementById('enterScreen');
     const playPauseBtn = document.getElementById('playPauseBtn');
     const playPauseIcon = document.getElementById('playPauseIcon');
-    const soundCloudPlayer = document.getElementById('soundcloud-player');
+    const soundCloudIframe = document.getElementById('soundcloud-player');
 
-    let isPlaying = true;
+    const widget = SC.Widget(soundCloudIframe);
+    let isPlaying = false;
+
+    function startMusicAndEnter() {
+      widget.play();
+      isPlaying = true;
+      playPauseIcon.classList.remove('fa-play');
+      playPauseIcon.classList.add('fa-pause');
+
+      enterScreen.style.opacity = '0';
+      setTimeout(() => {
+        enterScreen.style.display = 'none';
+      }, 500); 
+    }
 
     function togglePlayPause() {
-      const playerSrc = soundCloudPlayer.src;
       if (isPlaying) {
-        if (!playerSrc.includes("auto_play=false")) {
-          soundCloudPlayer.src = playerSrc.replace("auto_play=true", "auto_play=false");
-        }
+        widget.pause();
         playPauseIcon.classList.remove('fa-pause');
         playPauseIcon.classList.add('fa-play');
       } else {
-        if (!playerSrc.includes("auto_play=true")) {
-          soundCloudPlayer.src = playerSrc.replace("auto_play=false", "auto_play=true");
-        }
+        widget.play();
         playPauseIcon.classList.remove('fa-play');
         playPauseIcon.classList.add('fa-pause');
       }
       isPlaying = !isPlaying;
     }
 
+    enterScreen.addEventListener('click', startMusicAndEnter);
     playPauseBtn.addEventListener('click', togglePlayPause);
   </script>
 
