--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="box-brrr">
         <img style="margin-left: 10px;" src="images/yuko.gif" class="pfp" alt="Pierce PFP">
         <h3>YUKO</h3>
-        <p>Ex. Com boy</p>
+        <p>FUCK COM LOL</p>
         <p style="font-size:10px;">--Socials--</p>
         <a href="https://t.me/yukolol" target="_blank" rel="noopener noreferrer"><img src="images/telegram.png" height="30px" alt="Telegram"></a>
         <a href="https://www.roblox.com/users/1624343130/profile" target="_blank" rel="noopener noreferrer"><img src="images/roblox.png" height="30px" alt="Roblox"></a>
